# pybiorythm

./: .actrc  .dockerignore  .gitignore  .gitmessage  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  DEPLOYMENT_GUIDE.md  DOCKER.md  Dockerfile  LICENSE  LOCAL_TESTING.md  README.md  SBOM.md  _version.py  biorhythm_analysis_report.txt  biorhythm_analysis_results.json  biorythm.py  biorythm_timeseries_example.csv  build-docker.sh  cleanup-workflows.sh  docker-build-m2.sh  docker-compose.local.yml  docker-compose.yml  k8s-deployment.yaml  local-test.sh  main.py  mkdocs.yml  pyproject.toml  pytest.ini  test-semantic.md  update-secrets.sh
.github/: WORKFLOWS.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/environments/: dev.env  prod.env  staging.env
.github/workflows/: blue-green-deploy.yml  ci.yml  codeql.yml  commit-lint.yml  dependency-review.yml  dev-docker.yml  docker-publish.yml  docs.yml  manual-deploy.yml  mlc_config.json  release.yml  sbom.yml  semantic-release.yml  sync-branches.yml  test-blue-green.yml
biorythm/: __init__.py  core.py
docs/: README.md  index.md
docs/api/: calculator.md  core 2.md  core.md  errors.md  json-schema 2.md  json-schema.md
docs/deployment/: deployment-guide.md  docker.md  kubernetes.md  local-github-actions.md  local-testing.md  security 2.md  security.md
docs/developer-guide/: architecture 2.md  architecture.md  branching-workflow.md  code-quality.md  contributing.md  setup.md  testing 2.md  testing.md
docs/examples/: README.md
docs/examples/database-integration/api-server/: test_api_basic.py  test_api_comprehensive.py  test_server_final.py
docs/examples/database-integration/biorhythm-dashboard/: .env.example  README.md  pyproject.toml
docs/examples/database-integration/biorhythm-dashboard/biorhythm_dashboard/: settings.py  urls.py
docs/examples/database-integration/biorhythm-dashboard/dashboard/: plotly_utils.py  services.py  test_correlation.py  urls.py  views.py
docs/examples/database-integration/biorhythm-dashboard/dashboard/management/commands/: test_api.py
docs/examples/database-integration/django-api-server/: pyproject.toml
docs/examples/database-integration/django-api-server/api/: serializers.py  urls.py  views.py
docs/examples/database-integration/django-api-server/biorhythm_api/: asgi.py  settings.py  urls.py
docs/examples/database-integration/django-api-server/biorhythm_data/: models.py
docs/examples/database-integration/django-api-server/biorhythm_data/management/commands/: load_biorhythm_data.py
docs/examples/database-integration/django-api-server/biorhythm_data/migrations/: 0001_initial.py
docs/examples/database-integration/django-sqlite/: pyproject.toml
docs/examples/database-integration/django-sqlite/biorhythm_data/: admin.py
docs/examples/database-integration/django-sqlite/biorhythm_data/management/commands/: load_biorhythm_data.py
docs/examples/database-integration/django-sqlite/biorhythm_data/migrations/: 0001_initial.py
docs/examples/datasets/: README.md  pyproject.toml  sample-data-generator.py
docs/examples/datasets/sample_datasets/: one_year_1990.json
docs/examples/datasets/test_datasets/: README.md  data_dictionary.json  five_years_1980.csv  five_years_1980.json  multiple_people_2024.csv  multiple_people_2024.json  one_year_1990.csv  one_year_1990.json  quarterly_1995.csv  quarterly_1995.json  two_years_1985.csv  two_years_1985.json
docs/examples/django-api/: README.md  manage.py  pyproject.toml
docs/examples/django-api/biorhythm_api/: __init__.py  asgi.py  settings.py  urls.py  wsgi.py
docs/examples/django-api/biorhythms/: __init__.py  admin.py  apps.py  models.py  serializers.py  tests.py  urls.py  views.py
docs/examples/notebooks/: README.md  biorhythm-analysis.ipynb  biorhythm_analysis_report.txt  biorhythm_analysis_results.json  biorhythm_correlations.csv  biorhythm_data.csv  correlation-study.ipynb  pyproject.toml  test_biorhythm.py  visualization-gallery.ipynb
docs/examples/time-series/: basic-analysis.md
docs/package/: README.md  quickstart.md
docs/package/api/: calculator.md  core.md  json-schema.md
docs/package/guides/: integration.md
docs/user-guide/: cli.md  installation.md  output-formats.md  quick-start.md  usage-examples.md
docs/workflows/: blue-green.md  feature-develop-main-flow 2.md  github-actions.md  security.md  semantic-versioning.md
templates/: CHANGELOG.md.j2  CHANGELOG_BODY.md.j2
tests/: __init__.py  conftest.py  test_biorhythm_calculator.py  test_biorythm_coverage.py  test_json_timeseries.py  test_main.py
