[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "biorythm"
dynamic = ["version"]
description = "A Python library for biorhythm calculations"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.9,<3.13"
authors = [
    {name = "Peter Rosemann", email = "dkdndes@gmail.com"},
]
maintainers = [
    {name = "Peter Rosemann", email = "dkdndes@gmail.com"},
]
keywords = ["biorhythm", "biology", "cycles", "health"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "bokeh>=3.4.3",
    "jupyter>=1.1.1",
    "matplotlib>=3.9.4",
    "nbconvert>=7.16.6",
    "numpy>=1.20.0",
    "pandas>=2.3.1",
    "plotly>=6.2.0",
    "scipy>=1.13.1",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.5",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pandas>=2.0.3",
]

[project.urls]
Homepage = "https://github.com/dkdndes/pybiorythm"
Repository = "https://github.com/dkdndes/pybiorythm"
Issues = "https://github.com/dkdndes/pybiorythm/issues"

[dependency-groups]
dev = [
    "bandit[toml]>=1.7.10",
    "build>=1.2.2.post1",
    "cyclonedx-bom>=7.0.0",
    "hatch>=1.14.1",
    "pandas>=2.0.3",
    "pre-commit>=4.2.0",
    "pytest>=8.3.5",
    "pytest-benchmark>=4.0.0",
    "pytest-cov>=5.0.0",
    "python-semantic-release>=8.0.0",
    "ruff>=0.12.7",
    "safety>=3.6.0",
    "setuptools-scm>=8.3.1",
    "twine>=6.1.0",
]
docs = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.16",
    "mkdocs-mermaid2-plugin>=1.2.1",
]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "biorythm/_version.py"

[tool.semantic_release]
build_command = "uv build"
dist_path = "dist/"
upload_to_vcs_release = true
version_variables = [
    "biorythm/__init__.py:__version__",
]

[tool.semantic_release.branches.main]
match = "main"
prerelease_token = "rc"
prerelease = false

[tool.semantic_release.branches.develop]
match = "develop"
prerelease_token = "dev"
prerelease = true
upload_to_vcs_release = false

[tool.semantic_release.branches.feature]
match = "feat/*"
prerelease_token = "alpha"
prerelease = true
upload_to_vcs_release = false

[tool.semantic_release.branches.bugfix]
match = "fix/*"
prerelease_token = "beta"
prerelease = true
upload_to_vcs_release = false

[tool.semantic_release.branches.chore]
match = "chore/*"
prerelease_token = "dev"
prerelease = true
upload_to_vcs_release = false

[tool.semantic_release.changelog]
exclude_commit_patterns = []

[tool.semantic_release.changelog.default_templates]
changelog_file = "CHANGELOG.md"

[tool.semantic_release.changelog.environment]
block_start_string = "{%"
block_end_string = "%}"
variable_start_string = "{{"
variable_end_string = "}}"
comment_start_string = "{#"
comment_end_string = "#}"
trim_blocks = false
lstrip_blocks = false

[tool.semantic_release.commit_author]
env = "GIT_COMMIT_AUTHOR"
default = "semantic-release <semantic-release>"

[tool.semantic_release.commit_parser_options]
allowed_tags = ["build", "chore", "ci", "docs", "feat", "fix", "perf", "style", "refactor", "test"]
minor_tags = ["feat"]
patch_tags = ["fix", "perf"]

[tool.semantic_release.remote]
name = "origin"
type = "github"
ignore_token_for_push = false
token = { env = "GITHUB_TOKEN" }

[tool.semantic_release.publish]
dist_glob_patterns = ["dist/*"]
upload_to_vcs_release = true

