[project]
name = "biorhythm-sample-datasets"
version = "1.0.0"
description = "Standalone biorhythm sample dataset generator"
requires-python = ">=3.8"
dependencies = [
    "jupyter>=1.1.1",
    "matplotlib>=3.7.5",
    "pandas>=1.3.0",
    "seaborn>=0.13.2",
]

[project.optional-dependencies]
dev = [
    "jupyter",
    "matplotlib",
    "seaborn",
]

[tool.uv]
dev-dependencies = [
    "jupyter",
    "matplotlib", 
    "seaborn",
]
