[project]
name = "biorhythm-django-api"
version = "1.0.0"
description = "Simple Django REST API example for PyBiorythm data"
requires-python = ">=3.9,<3.13"
dependencies = [
    "django>=4.2.0",
    "djangorestframework>=3.14.0",
    "django-cors-headers>=4.0.0",
    "python-dateutil>=2.8.0",
    "biorythm @ git+https://github.com/dkdndes/pybiorythm.git",
]

[project.optional-dependencies]
dev = [
    "django-extensions",
]

[tool.django]
settings_module = "biorhythm_api.settings"