[project]
name = "biorhythm-notebooks"
version = "1.0.0"
description = "Biorhythm analysis notebooks"
requires-python = ">=3.8"
dependencies = [
    "pandas>=1.3.0",
    "numpy>=1.20.0",
    "matplotlib>=3.5.0",
    "seaborn>=0.11.0",
    "scipy>=1.7.0",
    "jupyter>=1.0.0",
    "nbconvert>=6.0.0",
    "statsmodels>=0.14.1",
    "plotly>=6.2.0",
    "bokeh>=3.1.1",
]
