[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "biorhythm-dashboard"
version = "1.0.0"
description = "Django dashboard application consuming PyBiorythm REST API with Plotly visualizations"
authors = [
    {name = "PyBiorythm Team", email = "info@pybiorythm.com"},
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Framework :: Django :: 5.1",
    "Topic :: Scientific/Engineering :: Visualization",
]

dependencies = [
    "django>=5.1.0,<6.0",
    "django-htmx>=1.17.0",
    "requests>=2.31.0",
    "plotly>=5.17.0",
    "python-dotenv>=1.0.0",
    "whitenoise>=6.6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-django>=4.5.0",
    "pytest-cov>=4.1.0",
    "black>=23.7.0",
    "flake8>=6.0.0",
    "isort>=5.12.0",
]

[project.urls]
Homepage = "https://github.com/dkdndes/pybiorythm"
Documentation = "https://github.com/dkdndes/pybiorythm/tree/main/docs"
Repository = "https://github.com/dkdndes/pybiorythm"
Issues = "https://github.com/dkdndes/pybiorythm/issues"

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  migrations
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
skip_glob = ["*/migrations/*"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "biorhythm_dashboard.settings"
python_files = ["tests.py", "test_*.py", "*_tests.py"]
addopts = "--tb=short --strict-markers"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]